--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,7 @@ body {
 .main-page {
   background-color: #2e2f42;
   text-align: center;
+  padding: 188 0;
 }
 .main-page-text {
   color: #fff;
@@ -147,9 +148,9 @@ body {
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  padding: 188 0;
+  max-width: 496px;
 }
-.button-pad {
+.button {
   padding-top: 24px;
   padding-right: 495px;
   padding-bottom: 188px;
@@ -196,6 +197,7 @@ body {
 .all-features {
   display: flex;
   gap: 24px;
+  width: calc((100% - 72px) / 4);
 }
 .feature-name {
   color: #2e2f42;
@@ -204,7 +206,6 @@ body {
   font-weight: 500;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
-  width: calc ((100% - 72px) / 4);
 }
 .feature-description {
   color: #434455;
@@ -331,7 +332,7 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  padding-bottom: 16px;
+  margin-bottom: 16px;
   display: inline-block;
 }
 .logo-span-footer {
