--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,8 @@ body {
 .main-page {
   background-color: #2e2f42;
   text-align: center;
+}
+.main-page-container {
   padding: 188 0;
 }
 .main-page-text {
@@ -150,7 +152,7 @@ body {
   letter-spacing: 0.02em;
   max-width: 496px;
 }
-.button {
+.btn {
   padding-top: 24px;
   padding-right: 495px;
   padding-bottom: 188px;
@@ -165,7 +167,7 @@ body {
   border-radius: 4px;
   cursor: pointer;
 }
-.button-first {
+.button {
   color: #fff;
   font-size: 16px;
   line-height: 1.5;
@@ -236,13 +238,13 @@ body {
 .team-list {
   display: flex;
   gap: 24px;
+  width: calc ((100% - 72px) / 4);
 }
 .team-member-container {
   padding: 32px 0;
 }
 .team-member {
   background-color: #fff;
-  width: calc ((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
