--- a/css/styles.css
+++ b/css/styles.css
@@ -140,8 +140,6 @@ body {
 .main-page {
   background-color: #2e2f42;
   text-align: center;
-}
-.main-page-container {
   padding: 188 0;
 }
 .main-page-text {
@@ -152,7 +150,17 @@ body {
   letter-spacing: 0.02em;
   max-width: 496px;
 }
-.btn {
+.button {
+  color: #fff;
+  font-size: 16px;
+  line-height: 1.5;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+  padding-top: 16px;
+  padding-right: 32px;
+  padding-bottom: 16px;
+  padding-left: 32px;
   padding-top: 24px;
   padding-right: 495px;
   padding-bottom: 188px;
@@ -166,18 +174,6 @@ body {
   background: #4d5ae5;
   border-radius: 4px;
   cursor: pointer;
-}
-.button {
-  color: #fff;
-  font-size: 16px;
-  line-height: 1.5;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
-  letter-spacing: 0.04em;
-  padding-top: 16px;
-  padding-right: 32px;
-  padding-bottom: 16px;
-  padding-left: 32px;
 }
 .button:hover {
   background: #404bbf;
@@ -196,10 +192,10 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 }
-.all-features {
+.all-features-list {
   display: flex;
   gap: 24px;
-  width: calc((100% - 72px) / 4);
+  flex-basis: calc((100% - 3 * 24px) / 4);
 }
 .feature-name {
   color: #2e2f42;
