--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,8 @@ body {
 .main-page {
   background-color: #2e2f42;
   text-align: center;
-  padding: 188 0;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 .main-page-text {
   color: #fff;
@@ -174,6 +175,7 @@ body {
   background: #4d5ae5;
   border-radius: 4px;
   cursor: pointer;
+  height: 56px;
 }
 .button:hover {
   background: #404bbf;
@@ -195,7 +197,7 @@ body {
 .all-features-list {
   display: flex;
   gap: 24px;
-  flex-basis: calc((100% - 3 * 24px) / 4);
+  width: calc((100% - 72px) / 4);
 }
 .feature-name {
   color: #2e2f42;
