--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,7 @@ p {
 }
 ul,
 ol {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
   padding-left: 0;
 }
 img {
@@ -158,14 +157,6 @@ body {
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   letter-spacing: 0.04em;
-  padding-top: 16px;
-  padding-right: 32px;
-  padding-bottom: 16px;
-  padding-left: 32px;
-  padding-top: 24px;
-  padding-right: 495px;
-  padding-bottom: 188px;
-  padding-left: 495px;
   display: block;
   margin-left: auto;
   margin-right: auto;
